Fix some layout issues with menubutton items

--- a/media/com_jce/editor/tinymce/themes/advanced/skins/default/src/menu.css
+++ b/media/com_jce/editor/tinymce/themes/advanced/skins/default/src/menu.css
@@ -283,6 +283,8 @@
 
 .mceMenu .mceToolbarRow .mceToolbarItem {
     width: 100%;
+    display: flex;
+    gap: 4px;
 }
 
 .mceMenu .mceToolbarFooter .mceToolbarItem {
