--- a/media/com_jce/editor/tinymce/themes/advanced/skins/default/ui.css
+++ b/media/com_jce/editor/tinymce/themes/advanced/skins/default/ui.css
@@ -725,6 +725,8 @@ textarea::placeholder {
 
 .mceMenu .mceToolbarRow .mceToolbarItem {
     width: 100%;
+    display: flex;
+    gap: 4px;
 }
 
 .mceMenu .mceToolbarFooter .mceToolbarItem {
